# Algoritmi-harjoitusty-

./: .gitignore  README.md  pyproject.toml
docs/: kaytto_ohjeet.md  maarittelydokumentti.md  tietoa_lopullisesta_versiosta.md  viikkoraportti_1.md  viikkoraportti_2.md  viikkoraportti_3.md  viikkoraportti_4.md  viikkoraportti_5.md  viikkoraportti_6.md
src/: index.py
src/algorithms/: convert_data_to_abc.py  markov_chain.py  music_player.py  parse_abc_notation.py  trie_algorithm.py  trie_data_structure.py
src/algorithms_and_data_structures/: apu_file.abc  markov_chain.py  trie_data_structure.py
src/data/: Bung_your_eyes.abc  Catherine_Ogie.abc  HavaNagila.abc  Ievan_polka.abc  Il_Prete_Rosso_Allegro.abc  Krepatka.abc  Lost_my_love.abc  Puolalainen_kansanlaulu.abc  Rasputin.abc  Sininen_ja_valkoinen.abc  Taivas_on_sininen_ja_valkoinen.abc  The_Musical_Priest.abc  The_bear_dance.abc  test.abc
src/entities/: parse_abc_notation.py
src/logic/: convert_data_to_abc.py  music_player.py  parse_abc_notation.py
src/tests/: MarkovChainTest.py  test_convert_number_to_abc.py  test_markov_chain.py  test_parse_abc_notation.py
src/ui/: logic.py  ui.py
