[tool.poetry]
name = "tiralabra1"
version = "0.1.0"
description = ""
authors = ["Maija <maija.rislakki@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
pytest = "^8.1.1"
coverage = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
